force-app/main/default/objects/LeadPromocion__c/LeadPromocion__c.object-meta.xml
<CustomObject>
    <label>LeadPromocion</label>
    <nameField>
        <label>Nombre de LeadPromocion</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LeadPromociones</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>