force-app/main/default/objects/LeadPromocion__c/fields/Candidato__c.field-meta.xml
<CustomField>
    <fullName>Candidato__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Candidato</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Promociones</relationshipLabel>
    <relationshipName>LeadPromociones</relationshipName>
    <type>Lookup</type>
</CustomField>