force-app/main/default/objects/LeadPromocion__c/fields/Estado__c.field-meta.xml
<CustomField>
    <fullName>Estado__c</fullName>
    <description>Establece el estado de interés del lead por la promoción</description>
    <label>Estado</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Interesado</fullName>
            </value>
            <value>
                <fullName>Descartado</fullName>
            </value>
            <value>
                <fullName>Ofertado</fullName>
            </value>
            <value>
                <fullName>Ganado/Comprado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>