force-app/main/default/objects/LeadPromocion__c/fields/Promocion__c.field-meta.xml
<CustomField>
    <fullName>Promocion__c</fullName>
    <label>Promocion</label>
    <referenceTo>Promocion__c</referenceTo>
    <relationshipLabel>Candidatos</relationshipLabel>
    <relationshipName>LeadPromociones</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>